Add google auth route
